@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: JavaLoadCmd.test,v 1.4 2000/12/22 09:47:15 mdejong Exp $
+# RCS: @(#) $Id: JavaLoadCmd.test,v 1.5 2002/12/25 04:50:28 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -24,7 +24,7 @@ setupJavaPackage
 set platform [testgetplatform]
 
 if {[info exists env(BUILD_DIR)]} {
-    set root_path [file join $env(BUILD_DIR) tests]
+    set root_path [file join $env(BUILD_DIR) btests]
 } elseif {$platform == "windows"} {
     set root_path [file join .. win tests]
 } else {
